- Modified GoogleMaps program to illustrate more functionality of google   maps api - Added Location_test program that is able to (pseudo) track your   location

--- a/Location_test/AndroidManifest.xml
+++ b/Location_test/AndroidManifest.xml
@@ -3,12 +3,12 @@
       package="edu.berkeley.cs294.sample"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon">
+    <application android:icon="@drawable/icon" android:label="@string/app_name">
     
     <uses-library android:name="com.google.android.maps" />
     
-        <activity android:name=".GoogleMaps"
-                  >
+        <activity android:name=".ShowLocation"
+                  android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -17,5 +17,7 @@
     </application>
     
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     
 </manifest>
