- Add links related to wifi & map api - Location_test for auto-update location - Modify GoogleMaps to have a lot more functionalities

--- a/GoogleMaps/AndroidManifest.xml
+++ b/GoogleMaps/AndroidManifest.xml
@@ -7,8 +7,7 @@
     
     <uses-library android:name="com.google.android.maps" />
     
-        <activity android:name=".GoogleMaps"
-                  >
+        <activity android:name=".GoogleMaps">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
