--- a/ToDo_Replica/AndroidManifest.xml
+++ b/ToDo_Replica/AndroidManifest.xml
@@ -20,4 +20,5 @@
 		<activity android:name=".Add"> </activity>
 		
     </application>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 </manifest>
