--- a/ToDo_Replica/AndroidManifest.xml
+++ b/ToDo_Replica/AndroidManifest.xml
@@ -18,6 +18,7 @@
 		<activity android:name=".ToDo_Lists"> </activity>
 		<activity android:name=".Groups"> </activity>
 		<activity android:name=".Add"> </activity>
+		<activity android:name=".View"> </activity>
 		
     </application>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
