--- a/ToDo_Replica/AndroidManifest.xml
+++ b/ToDo_Replica/AndroidManifest.xml
@@ -3,8 +3,9 @@
       package="eecs.berkeley.edu.cs294"
       android:versionCode="1"
       android:versionName="1.0">
+	<uses-library android:name="com.google.android.maps" />
     <uses-sdk android:minSdkVersion="8" />
-
+	
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@style/CustomTheme">
         <activity android:name=".ToDo_Replica"
                   android:label="@string/app_name">
