fix inconsistency in the todo_lists when adding a new to-do (table not refreshed) add more query to database helper add view (click on to-do) add edit (hold click on to-do) worked but not completely finished due to unimplemented group methods add delete (hold click on to-do) everything tested and worked

--- a/ToDo_Replica/AndroidManifest.xml
+++ b/ToDo_Replica/AndroidManifest.xml
@@ -18,8 +18,9 @@
 		<activity android:name=".ToDo_Lists"> </activity>
 		<activity android:name=".Groups"> </activity>
 		<activity android:name=".Add"> </activity>
-		<activity android:name=".View"> </activity>
+		<activity android:name=".Preview"> </activity>
 		<activity android:name=".AddGroup"> </activity>
+		<activity android:name=".Edit"> </activity>
 		
     </application>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
