--- a/ToDo_Replica/AndroidManifest.xml
+++ b/ToDo_Replica/AndroidManifest.xml
@@ -6,8 +6,8 @@
 	
     <uses-sdk android:minSdkVersion="8" />
 	
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@style/CustomTheme">
-    
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@style/CustomTheme" android:debuggable="true">
+     
     <uses-library android:name="com.google.android.maps" />
     
         <activity android:name=".ToDo_Replica"
