--- a/ToDo_Replica/.classpath
+++ b/ToDo_Replica/.classpath
@@ -3,10 +3,12 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="lib" path="/home/hilfi/Documents/CS294-35/ToDo/ToDo_Replica/lib/gdata-calendar-2.0.jar"/>
-	<classpathentry kind="lib" path="/home/hilfi/Documents/CS294-35/ToDo/ToDo_Replica/lib/gdata-calendar-meta-2.0.jar"/>
-	<classpathentry kind="lib" path="/home/hilfi/Documents/CS294-35/ToDo/ToDo_Replica/lib/gdata-client-1.0.jar"/>
-	<classpathentry kind="lib" path="/home/hilfi/Documents/CS294-35/ToDo/ToDo_Replica/lib/gdata-client-meta-1.0.jar"/>
-	<classpathentry kind="lib" path="/home/hilfi/Documents/CS294-35/ToDo/ToDo_Replica/lib/gdata-core-1.0.jar"/>
+	<classpathentry kind="lib" path="/Users/syjxxii/ToDo/ToDo_Replica/lib/gdata-calendar-2.0.jar"/>
+	<classpathentry kind="lib" path="/Users/syjxxii/ToDo/ToDo_Replica/lib/gdata-calendar-meta-2.0.jar"/>
+	<classpathentry kind="lib" path="/Users/syjxxii/ToDo/ToDo_Replica/lib/gdata-client-1.0.jar"/>
+	<classpathentry kind="lib" path="/Users/syjxxii/ToDo/ToDo_Replica/lib/gdata-client-meta-1.0.jar"/>
+	<classpathentry kind="lib" path="/Users/syjxxii/ToDo/ToDo_Replica/lib/gdata-core-1.0.jar"/>
+	<classpathentry kind="lib" path="/Users/syjxxii/ToDo/ToDo_Replica/lib/guava-r09-rc2-gwt.jar"/>
+	<classpathentry kind="lib" path="/Users/syjxxii/ToDo/ToDo_Replica/lib/guava-r09-rc2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
