--- a/ToDo_Replica/AndroidManifest.xml
+++ b/ToDo_Replica/AndroidManifest.xml
@@ -28,4 +28,5 @@
 		
     </application>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
 </manifest>
