--- a/ToDo_Replica/AndroidManifest.xml
+++ b/ToDo_Replica/AndroidManifest.xml
@@ -26,7 +26,15 @@
 		<activity android:name=".AddGroup"> </activity>
 		<activity android:name=".Edit"> </activity>
 		
+		<activity android:name=".GoogleMaps"
+				  android:label="@string/app_name"
+     			  android:theme="@android:style/Theme.NoTitleBar" />
+     			  
     </application>
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
