--- a/ToDo_Replica/AndroidManifest.xml
+++ b/ToDo_Replica/AndroidManifest.xml
@@ -29,12 +29,14 @@
 		<activity android:name=".GoogleMaps"
 				  android:label="@string/app_name"
      			  android:theme="@android:style/Theme.NoTitleBar" />
+     	<activity android:name=".AddContact"> </activity>
      			  
     </application>
     
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
