--- a/ToDo_Replica/AndroidManifest.xml
+++ b/ToDo_Replica/AndroidManifest.xml
@@ -10,14 +10,14 @@
      
     <uses-library android:name="com.google.android.maps" />
     
-        <activity android:name=".ToDo_Replica"
+        <activity android:name=".StartScreen"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-		
+		<activity android:name=".ToDo_Replica"> </activity>
 		<activity android:name=".Maps"> </activity>
 		<activity android:name=".ToDo_Lists"> </activity>
 		<activity android:name=".Groups"> </activity>
@@ -44,4 +44,6 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 </manifest>
