--- a/ToDo_Replica/AndroidManifest.xml
+++ b/ToDo_Replica/AndroidManifest.xml
@@ -18,14 +18,16 @@
             </intent-filter>
         </activity>
 		
-		<activity android:name=".Maps"> </activity>
-		<activity android:name=".ToDo_Lists"> </activity>
-		<activity android:name=".Groups"> </activity>
-		<activity android:name=".Add"> </activity>
-		<activity android:name=".Invitations"> </activity>
+		<activity android:name=".Maps"></activity>
+		<activity android:name=".ToDo_Lists"></activity>
+		<activity android:name=".Groups"></activity>
+		<activity android:name=".Add"></activity>
+		<activity android:name=".AddGroup"></activity>
+		<activity android:name=".InvitationWindow"></activity>
+		<activity android:name=".InvitationConfirmation"></activity>
 		<activity android:name=".Preview"> </activity>
-		<activity android:name=".AddGroup"> </activity>
-		<activity android:name=".Edit"> </activity>
+		<activity android:name=".PreviewGroup"></activity>
+		<activity android:name=".Edit"></activity>
 		
 		<activity android:name=".GoogleMaps"
 				  android:label="@string/app_name"
