--- a/ToDo_Replica/AndroidManifest.xml
+++ b/ToDo_Replica/AndroidManifest.xml
@@ -10,7 +10,7 @@
      
     <uses-library android:name="com.google.android.maps" />
     
-        <activity android:name=".StartScreen"
+        <activity android:name=".ToDo_Replica"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +18,7 @@
             </intent-filter>
         </activity>
 
-		<activity android:name=".ToDo_Replica"> </activity> 		
+		<activity android:name=".StartScreen"> </activity> 		
 		<activity android:name=".Maps"></activity>
 		<activity android:name=".ToDo_Lists"></activity>
 		<activity android:name=".Groups"></activity>
